# 2D_FEM_Simulation

./: CMakeLists.txt  Readme.md  build.sh  imgui.ini
src/: CMakeLists.txt
src/app/: CMakeLists.txt  fem-app.cpp  manip-app.cpp
src/femLib/: CMakeLists.txt  Element.h  EnergyFunction.h  Pin.h  Simulation.h  Triangle.h
src/guiLib/: application.cpp  application.h
src/helpersLib/: BernHelpers.h  CMakeLists.txt
src/optLib/: CMakeLists.txt  GradientDescentMinimizer.h  Minimizer.h  NewtonFunctionMinimizer.h  ObjectiveFunction.h
